--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "e-education",
   "version": "1.0.0",
   "dependencies": {
-    "better-sqlite3": "^7.5.1"
+    "better-sqlite3": "^7.5.1",
+    "body-parser": "^1.20.0",
+    "cookie-session": "^2.0.0",
+    "express": "^4.17.3",
+    "mustache-express": "^1.3.2"
   }
 }
