--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "cookie-session": "^2.0.0",
     "express": "^4.17.3",
     "mustache-express": "^1.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
+  "scripts": {
+    "watch" : "nodemon ./js_files/second_server.js"
   }
 }
